Fix the modal overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1163,7 +1163,7 @@ svg {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 3.125rem);
   overflow: auto;
   z-index: 40;
   box-sizing: border-box;
@@ -1206,6 +1206,7 @@ svg {
 @media (min-width: 768px) {
   .blocker {
     top: 0;
+    height: 100%;
   }
 }
 
